--- a/index.html
+++ b/index.html
@@ -1256,8 +1256,7 @@
                     organization.
                 </p>
                 <p>
-                    Cite as: Liu E, Charles D, and Austin CC (2024). <a
-                        href="https://fairerdata.github.io/FAIRER-Aware-REPRODUCIBILITY-Assessment/">FAIRER Aware Reproducibility Checklist.<i class="fa fa-external-link"></i></a></p>
+                    Cite as: Liu E, Charles D, and Austin CC (2024). FAIRER Aware Reproducibility Checklist.<i class="fa fa-external-link"></i></p>
             </div>
         </div>
     </div>
