--- a/index.html
+++ b/index.html
@@ -1256,7 +1256,7 @@
                     organization.
                 </p>
                 <p>
-                    Cite as: Liu E, Charles D, and Austin CC (2024). FAIRER Aware Reproducibility Checklist.<i class="fa fa-external-link"></i></p>
+                    Cite as: Liu E, Charles D, and Austin CC (2024). FAIRER Aware Reproducibility Checklist.</p>
             </div>
         </div>
     </div>
