--- a/index.html
+++ b/index.html
@@ -1324,7 +1324,14 @@
                     organization.
                 </p>
                 <p>
-                    Cite as: Liu E, Charles D, and Austin CC (2024). FAIRER Aware Reproducibility Checklist.</p>
+                    Cite as: Liu E, Charles D, and Austin CC (2024). FAIRER Aware Reproducibility Checklist.
+                </p>
+                <p>
+                    SOURCES (built upon and added to):
+                    [Reproducibility Checklist – Association for the Advancement of Artificial Intelligence](https://aaai.org/conference/aaai/aaai-23/reproducibility-checklist/)
+                    [AI-reproducibility-2020.pdf (McGill University and University of Waterloo)](https://cs.uwaterloo.ca/~brecht/courses/Perf-Eval-Shared/readings/f20/AI-reproducibility-2020.pdf)
+                    [MICCAI_2023_Repro_Tuto.pdf (miccai2023-reproducibility-tutorial.github.iohttps://miccai2023-reproducibility-tutorial.github.io/materials/2023.10.08_MICCAI_2023_Repro_Tuto.pdf
+                </p> 
             </div>
         </div>
     </div>
