--- a/index.html
+++ b/index.html
@@ -1327,10 +1327,21 @@
                     Cite as: Liu E, Charles D, and Austin CC (2024). FAIRER Aware Reproducibility Checklist.
                 </p>
                 <p>
-                    SOURCES (built upon and added to):
-                    [Reproducibility Checklist – Association for the Advancement of Artificial Intelligence](https://aaai.org/conference/aaai/aaai-23/reproducibility-checklist/)
-                    [AI-reproducibility-2020.pdf (McGill University and University of Waterloo)](https://cs.uwaterloo.ca/~brecht/courses/Perf-Eval-Shared/readings/f20/AI-reproducibility-2020.pdf)
-                    [MICCAI_2023_Repro_Tuto.pdf (miccai2023-reproducibility-tutorial.github.iohttps://miccai2023-reproducibility-tutorial.github.io/materials/2023.10.08_MICCAI_2023_Repro_Tuto.pdf
+                    SOURCES (built upon and added to): <br>
+                    <a
+                        href="https://aaai.org/conference/aaai/aaai-23/reproducibility-checklist/"
+                        target="_blank">Reproducibility Checklist – Association for the Advancement of Artificial Intelligence<i
+                            class="fa fa-external-link"></i></a>
+                    <br>
+                    <a
+                        href="https://cs.uwaterloo.ca/~brecht/courses/Perf-Eval-Shared/readings/f20/AI-reproducibility-2020.pdf"
+                        target="_blank">AI-reproducibility-2020.pdf (McGill University and University of Waterloo)<i
+                            class="fa fa-external-link"></i></a>
+                    <br>
+                    <a
+                        href="https://miccai2023-reproducibility-tutorial.github.io/materials/2023.10.08_MICCAI_2023_Repro_Tuto.pdf"
+                        target="_blank">MICCAI_2023_Repro_Tuto.pdf<i
+                            class="fa fa-external-link"></i></a>
                 </p> 
             </div>
         </div>
