--- a/index.html
+++ b/index.html
@@ -1506,9 +1506,10 @@
             <!-- ========================== -->
             <!-- ======== COMMENT  ======== -->
             <!-- ========================== -->
-            <label for="username"><br>Enter your name (optional for printing):</label>
+           <!-- <label for="username"><br>Enter your name (optional for printing):</label>
             <input type="text" id="username">
             <br><br>
+        -->
             <div id="comment-box" class="col-md-12">
                 <h3>Your Notes <i class="far fa-hand-point-left" aria-hidden="true"></i></h3>
                 <div class="row">
