--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                     verify the
                     data lineage and processing, reanalyze the data and obtain consistent computational results using
                     the same
-                    input raw data, computational steps, methods, computer code, and conditions of analysis in order to
+                    input raw data, computational steps, methods, computer software & code, and conditions of analysis in order to
                     determine if the same result emerges from the reprocessing and reanalysis. “Same result” can mean
                     different
                     things in different contexts: identical measures in a fully deterministic context, the same numeric
