--- a/index.html
+++ b/index.html
@@ -383,7 +383,6 @@
                     of the assessment, including tips for improvement, to your local computer and add notes for future
                     reference.
                 </p>
-                <p>Version 0.1.0 alpha (2024-03-15)</p>
                 <p> <a href="https://www.niso.org/press-releases/contributor-roles-taxonomy-credit-formalized-ansiniso-standard"
                         target="_blank">CRediT </a><i class="fa fa-external-link"></i></a><a data-toggle="modal"
                         onclick="show_modal('citation', '#modal')"> Author statement <i
@@ -1720,7 +1719,7 @@
                         organization.
                     </p>
                     <p>
-                        Cite as: Liu E, Charles D, and Austin CC (2024). FAIRER Aware Reproducibility Checklist.
+                        Cite as: Liu, E., Charles, D., & Austin, C. C. (2024). FAIRER Aware Reproducibility Checklist Tool (Version 1.0) [Computer software]. https://github.com/FAIRERdata/FAIRER-Aware-REPRODUCIBILITY-Assessment/.
                     </p>
                     <p>
                         SOURCES (built upon and added to): <br>
