--- a/index.html
+++ b/index.html
@@ -345,6 +345,11 @@
                             target="_blank">FAIRER-Aware-DATA-Assessment<i class="fa fa-external-link"></i></a>
                         (responds to the GC data strategy Priority 2.2.b., assessment of existing data for reuse).
                     </li>
+                    <li>
+                        <a href="https://fairerdata.github.io/FAIRER-Aware-AI-SAFETY-Assessment/"
+                            target="_blank">FAIRER-Aware-AI Safety-Checklist<i class="fa fa-external-link"></i></a>
+                        (responds to he GC data strategy Mission 3.3 for responsible, transparent and ethical data stewardship to maintain trust).
+                    </li>
                 </ul>
             </div> <br>
 
