--- a/index.html
+++ b/index.html
@@ -328,7 +328,8 @@
                         href="https://www.canada.ca/en/treasury-board-secretariat/corporate/reports/2023-2026-data-strategy.html"
                         target="_blank">GC Data Strategy for the Federal Public Service (2023-2026) <i
                             class="fa fa-external-link"></i></a> Mission 3.3 for responsible, transparent and
-                    ethical data stewardship to maintain trust. This tool is suitable for a first screening level
+                    ethical data stewardship to maintain trust and to the <a href="https://www.canada.ca/en/government/system/digital-government/government-canada-digital-standards/be-good-data-stewards.html" target="_blank">GC Digital Standards Playbook - Be good data stewards (2025)<i
+                            class="fa fa-external-link"></i></a>. This tool is suitable for a first screening level
                     estimation of the reproducibility of a particular data asset and associated code.
                 </p>
                 <p>
@@ -1753,3 +1754,4 @@
 </body>
 
 </html>
+
