--- a/index.html
+++ b/index.html
@@ -326,10 +326,12 @@
                 <p>
                     This tool responds to the <a
                         href="https://www.canada.ca/en/treasury-board-secretariat/corporate/reports/2023-2026-data-strategy.html"
-                        target="_blank">GC Data Strategy for the Federal Public Service (2023-2026) <i
+                        target="_blank">2023-2026 Data Strategy for the Federal Public Service (Government of Canada, 2023) <i
                             class="fa fa-external-link"></i></a> Mission 3.3 for responsible, transparent and
-                    ethical data stewardship to maintain trust and to the <a href="https://www.canada.ca/en/government/system/digital-government/government-canada-digital-standards/be-good-data-stewards.html" target="_blank">GC Digital Standards Playbook - Be good data stewards (2025)<i
-                            class="fa fa-external-link"></i></a>. This tool is suitable for a first screening level
+                    ethical data stewardship to maintain trust 
+                    and to the <a href="https://www.canada.ca/en/government/system/digital-government/government-canada-digital-standards/be-good-data-stewards.html" target="_blank">Digital Standards Playbook - Be good data stewards (Government of Canada, 2025)<i
+                            class="fa fa-external-link"></i></a>. 
+                    This tool is suitable for a first screening level
                     estimation of the reproducibility of a particular data asset and associated code.
                 </p>
                 <p>
@@ -1754,4 +1756,5 @@
 </body>
 
 </html>
+
 
