--- a/index.html
+++ b/index.html
@@ -324,18 +324,19 @@
             <div id="intro-box">
                 <br>
                 <p>
-                    This tool responds to the <a
-                        href="https://www.canada.ca/en/treasury-board-secretariat/corporate/reports/2023-2026-data-strategy.html"
-                        target="_blank">2023-2026 Data Strategy for the Federal Public Service (Government of Canada, 2023) <i
-                            class="fa fa-external-link"></i></a> Mission 3.3 for responsible, transparent and
-                    ethical data stewardship to maintain trust 
-                    and to the <a href="https://www.canada.ca/en/government/system/digital-government/government-canada-digital-standards/be-good-data-stewards.html" target="_blank">Digital Standards Playbook - Be good data stewards (Government of Canada, 2025)<i
-                            class="fa fa-external-link"></i></a>. 
+                    This tool responds to the <a href="https://www.canada.ca/en/treasury-board-secretariat/corporate/reports/2023-2026-data-strategy.html" target="_blank">
+                    2023-2026 Data Strategy for the Federal Public Service (Government of Canada, 2023) <i class="fa fa-external-link"></i></a> 
+                    Mission 3.3 for responsible, transparent and ethical data stewardship to maintain trust and to the <a href="https://www.canada.ca/en/government/system/digital-government/government-canada-digital-standards/be-good-data-stewards.html" target="_blank">
+                    Digital Standards Playbook - Be good data stewards (Government of Canada, 2025)<i class="fa fa-external-link"></i></a>. 
+                    See, also, the <a href="https://www.rd-alliance.org/groups/rda-reproducibility-checklist-working-group/activity/" target="_blank">
+                    international Research Data Analysis RDA Reproducibility Checklist Working Group <i class="fa fa-external-link"></i></a>. </p>
+
+                <p>
                     This tool is suitable for a first screening level
                     estimation of the reproducibility of a particular data asset and associated code.
                 </p>
                 <p>
-                    There are two companion tools which you may also find useful:
+                    There are three companion tools which you may also find useful:
                 </p>
                 <ul>
                     <li>
@@ -1756,5 +1757,6 @@
 </body>
 
 </html>
+
 
 
